Wrap picture and text; fix flex clashes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 
-/* Shared header and main body styles */
+/*-------------------------------------------------------------------------------*/
+/*                     Shared header and main body styles                        */
+/*-------------------------------------------------------------------------------*/
 
 body {
     max-width: 1280px;
@@ -37,15 +39,33 @@ a {
     padding: 8px;
 }
 
-.flex-container {
-    display: inline-flex;
-    flex-wrap: wrap;   
-  }
+#line {
+    position: relative;
+    top: -45px;
+    z-index: -1;
+}
+
+.nav-item {
+    background-color: white;
+}
+
+a.active {
+    text-decoration: underline;
+}
+
+
+/*-------------------------------------------------------------------------------*/
+/*                              Welcome page                                     */
+/*-------------------------------------------------------------------------------*/
+
+.image {
+    align-self: center;
+}
 
   .pic {
     width: 450px;
     object-fit: contain;
-    align-self: flex-start;
+    align-self: center;
     
   }
 
@@ -64,35 +84,32 @@ a {
   .logofloat {
  
     position: relative;
-    left: -20px;
-    top: -20px;
+    left: -10px;
+    top: -10px;
   }
 
-  #line {
-      position: relative;
-      top: -45px;
-      z-index: -1;
-  }
-
-  .nav-item {
-      background-color: white;
-  }
-
-  a.active {
-      text-decoration: underline;
-  }
-
-  .main {
+ .main {
       flex: 1;
   }
+
+  .welcome-flex-container {
+    display: inline-flex;
+    flex-wrap: wrap; 
+  }
   
-  .flex-container > div {
-    margin: 20px;
-    
+  .welcome-flex-container > div {
+    margin: 20px;    
+  }
+
+  #aboutme {
+      min-width: 250px;
   }
 
   
-/*  Experience  */
+/*-------------------------------------------------------------------------------*/
+/*                                    Experience                                 */
+/*-------------------------------------------------------------------------------*/
+
 section div.carousel-item img{
     width: 500px;
 }
@@ -126,6 +143,8 @@ section.carousel {
 
 .expParagraph {
     margin-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 150px;
 }
 
@@ -161,11 +180,9 @@ section.carousel {
 }
 
  
-
-
-
-
-/* Contact */
+/*-------------------------------------------------------------------------------*/
+/*                                   Contact                                     */
+/*-------------------------------------------------------------------------------*/
 
   .intro {
       margin-top: 0px;
@@ -187,6 +204,7 @@ section.carousel {
 
   #contactMain {
       padding-left: 65px;
+      padding-right: 20px;
       max-width: 800px;
   }
 
@@ -196,14 +214,20 @@ section.carousel {
 
   .flexNameContainer {
     display: flex;
+    align-items: stretch;
+    width: 100%;
   }
 
-  .flex-container > div {
-    margin: 10px;
-    padding: 20px;
- }
+  .flexNameContainer > div { 
+      flex-grow: 1;
+  }
 
-  
+  .flexNameContainer > :first-child {
+     margin-right: 10px;
+  }
+
+
+
   #contactFName {
       margin-right: 30px;
       min-width: 100px;
